HttpRequest: rewind the input data before sending it

* This is needed for redirects to work as expected.
* It makes it harder to send data starting from the middle of a
BPositionIO (you now need a wrapper object), but that is an uncommon
feature so it is acceptable.

Fixes #11687.